src/syntax/tests/data/negative/while-loop-is-not-an-expression.hsh
let result = while true do end
